# flask-sql-template

./: .gitignore  README.md  pyproject.toml
sqllearning/app/: __init__.py
sqllearning/app/api/: database.py  models.py  views.py
tests/: conftest.py  test_sqllearning.py
