[tool.poetry]
name = "sqlLearning"
version = "0.1.0"
description = ""
authors = ["Dustin Mendoza <dmendoza@nvidia.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3"
flask = "^1.1"
pytest-mock = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
